--- a/archlinuxcn/cscope-git/PKGBUILD
+++ b/archlinuxcn/cscope-git/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=cscope-git
 pkgver=15.9.0.15.geaea31c
 pkgrel=2
 pkgdesc="A developers tool for browsing program code"
-arch=('x86_64')
+arch=(x86_64 armv7h aarch64)
 url="http://cscope.sourceforge.net/"
 license=('BSD')
 makedepends=('git')
