--- a/archlinuxcn/golang-deepin-gir-git/lilac.yaml
+++ b/archlinuxcn/golang-deepin-gir-git/lilac.yaml
@@ -9,4 +9,7 @@ build_prefix: extra-x86_64
 pre_build: vcs_update
 
 update_on:
-  - github: linuxdeepin/go-gir-generator
+  - source: github
+    github: linuxdeepin/go-gir-generator
+  - source: aur
+    aur: golang-deepin-gir-git
