--- a/archlinuxcn/golang-github-linuxdeepin-go-x11-client-git/PKGBUILD
+++ b/archlinuxcn/golang-github-linuxdeepin-go-x11-client-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: DingYuan Zhang <justforlxz@gmail.com>
 
 pkgname=golang-github-linuxdeepin-go-x11-client-git
-pkgver=0.6.0.r1.gace6660
+pkgver=0.6.1.r1.gfe50ee5
 pkgrel=1
 pkgdesc='X11 protocol go language binding'
 arch=('any')
@@ -12,20 +12,20 @@ replaces=('golang-github-linuxdeepin-go-x11-client')
 provides=('golang-github-linuxdeepin-go-x11-client')
 groups=('deepin-git')
 depends=('go' 'golang-deepin-lib-git' 'golang-golang-x-text')
-makedepends=('git')
+makedepends=('git' 'xorg-server-xvfb' 'golang-github-stretchr-testify' 'golang-gopkg-check.v1' 'golang-gopkg-yaml.v2')
 checkdepends=('xorg-server-xvfb' 'golang-github-stretchr-testify' 'golang-gopkg-check.v1' 'golang-gopkg-yaml.v2' 'git')
-source=('git://github.com/linuxdeepin/go-x11-client')
+source=("$pkgname::git://github.com/linuxdeepin/go-x11-client")
 sha512sums=('SKIP')
 
 pkgver() {
-    cd go-x11-client
+    cd $pkgname
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 check() {
   export GOPATH="$srcdir/build:/usr/share/gocode"
   mkdir -p "$srcdir"/build/src/github.com/linuxdeepin
-  cp -a "$srcdir"/go-x11-client "$srcdir"/build/src/github.com/linuxdeepin/go-x11-client
+  cp -a "$srcdir/$pkgname" "$srcdir"/build/src/github.com/linuxdeepin/go-x11-client
   cd "$srcdir"/build/src/github.com/linuxdeepin/go-x11-client
   go get gopkg.in/yaml.v3
   xvfb-run go test -v $(go list ./...)
@@ -33,7 +33,7 @@ check() {
 
 package() {
   mkdir -p "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin
-  cp -a "$srcdir"/go-x11-client "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin/go-x11-client
+  cp -a "$srcdir/$pkgname" "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin/go-x11-client
 
   rm -r "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin/go-x11-client/debian
 }
