--- a/archlinuxcn/golang-github-linuxdeepin-go-x11-client-git/lilac.yaml
+++ b/archlinuxcn/golang-github-linuxdeepin-go-x11-client-git/lilac.yaml
@@ -9,4 +9,7 @@ build_prefix: extra-x86_64
 pre_build: vcs_update
 
 update_on:
-  - github: linuxdeepin/go-x11-client
+  - source: github
+    github: linuxdeepin/go-x11-client
+  - source: aur
+    aur: golang-github-linuxdeepin-go-x11-client-git
