--- a/archlinuxcn/rime-cloverpinyin/lilac.yaml
+++ b/archlinuxcn/rime-cloverpinyin/lilac.yaml
@@ -2,6 +2,9 @@ pre_build: aur_pre_build
 
 post_build: aur_post_build
 
+repo_depends:
+  - rime-symbols
+
 update_on:
   - source: aur
     aur: rime-cloverpinyin
