[osdlyrics-git][qemu-git] Update

--- a/archlinuxcn/osdlyrics-git/PKGBUILD
+++ b/archlinuxcn/osdlyrics-git/PKGBUILD
@@ -2,7 +2,7 @@
 pkgname=osdlyrics-git
 provides=(osdlyrics)
 conflicts=(osdlyrics osdlyrics-pedrohlc)
-pkgver=0.5.5.rc2.r0.g818bac8
+pkgver=0.5.5.rc2.r2.g88efbe3
 pkgrel=1
 pkgdesc="Standalone lyrics fetcher/displayer (windowed and OSD mode). Supports MPRIS1/2 players, and MPD."
 arch=(i686 x86_64)
@@ -11,7 +11,7 @@ license=(GPL3)
 depends=(dbus-glib desktop-file-utils gtk2 hicolor-icon-theme libnotify
          python-{future,dbus,chardet,gobject,pycurl}
          sqlite)
-makedepends=(intltool)
+makedepends=(git intltool)
 optdepends=('gobject-introspection-runtime: proxy detection in Gnome'
             'kdebindings-python: proxy detection in KDE'
             'python-mpd2: to interface with MPD')
