arch-hs-git: update when dependencies were rebuilt

--- a/archlinuxcn/arch-hs-git/lilac.yaml
+++ b/archlinuxcn/arch-hs-git/lilac.yaml
@@ -1,5 +1,6 @@
 maintainers:
   - github: felixonmars
+  - github: berberman
 
 build_prefix: extra-x86_64
 
@@ -10,3 +11,33 @@ update_on:
   - source: vcs
   - source: aur
     aur: arch-hs-git
+  - source: archpkg
+    archpkg: haskell-aeson
+  - source: archpkg
+    archpkg: haskell-req
+  - source: archpkg
+    archpkg: haskell-hackage-db
+  - source: archpkg
+    archpkg: haskell-megaparsec
+  - source: archpkg
+    archpkg: haskell-algebraic-graphs
+  - source: archpkg
+    archpkg: haskell-conduit
+  - source: archpkg
+    archpkg: haskell-tar-conduit
+  - source: archpkg
+    archpkg: haskell-conduit-extra
+  - source: archpkg
+    archpkg: haskell-split
+  - source: archpkg
+    archpkg: haskell-neat-interpolation
+  - source: archpkg
+    archpkg: haskell-microlens
+  - source: archpkg
+    archpkg: haskell-microlens-th
+  - source: archpkg
+    archpkg: haskell-polysemy
+  - source: archpkg
+    archpkg: haskell-colourista
+  - source: archpkg
+    archpkg: haskell-optparse-applicative
