--- a/archlinuxcn/linuxqq/PKGBUILD
+++ b/archlinuxcn/linuxqq/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Jack Wu (OriginCode) <self@origincode.me>
 
-pkgname=qq-linux
-pkgver=2.0.0_b2_1082
+pkgname=linuxqq
+pkgver=2.0.0_b2_1084
 pkgrel=1
 arch=('x86_64')
 pkgdesc="Tencent QQ for Linux"
@@ -9,13 +9,12 @@ url="https://im.qq.com/linuxqq"
 depends=('gtk2' 'glibc' 'gcc-libs' 'nss')
 license=('custom')
 source=(
-    "$pkgname-${pkgver}_orig_x86_64.pkg.tar.xz::http://down.qq.com/qqweb/LinuxQQ_1/linuxqq_2.0.0-b2-1082_x86_64.pkg.tar.xz"
+    "$pkgname-${pkgver}_orig_x86_64.pkg.tar.xz::https://down.qq.com/qqweb/LinuxQQ/linuxqq_2.0.0-b2-1084_x86_64.pkg.tar.xz"
     "qq.desktop"
 )
-sha512sums=('01a5babf0fbc5e96f5ddeef3fbb6f5e766523766742d6f95ecf84d2a7f599d35dd9971ba67c8976ae7c26c5cd5f985a81e124b3621d041ebb26c7ff9db525df7'
-            'a848ecb95c69250a13bf33e3fbad0bcef2cd30973dd0bb0cea9ad4d742d607f63b76791ccbbedc4dd412bd0c39c6ec515c40dea9a8471a4635dfaa3528bfe3d2')
-provides=('linuxqq')
-conflicts=('linuxqq')
+sha512sums=('7bccbb2caf1f072ae7345d5b66c702e705439068bebfacf2093a135b2c93058e89b5c3bf8ef2e68bc179ea75805cd10f065729729db6d0acca7ee96b501ba027'
+            'a6118c6a2dc03d22b423d4bca393c6a2ef0c8494f6480db0ee1b29ca28485e3a5e648d9485595d2d4c921d1688f72c70a70949c241b2fdde6d43bd0053cdcaa2')
+replaces=('qq-linux')
 
 package() {
     mkdir -p "$pkgdir/opt/tencent-qq"
