--- a/archlinuxcn/franz/PKGBUILD
+++ b/archlinuxcn/franz/PKGBUILD
@@ -5,7 +5,7 @@
 pkgname=franz
 #pkgver=${_pkgver//-/_} # Leaving it here for possible dev/beta package :)
 pkgver=5.5.0
-pkgrel=4
+pkgrel=6
 # Due to the previous "_beta" naming
 epoch=1
 pkgdesc='Free messaging app for services like WhatsApp, Slack, Messenger and many more.'
@@ -21,17 +21,20 @@ makedepends=(expac git npm python)
 source=("git+https://github.com/meetfranz/$pkgname#tag=v$pkgver"
         'franz.desktop'
         'franz.sh'
-        0001-.patch)
+        0001-.patch
+        0001-Add-cmdline-option-to-open-with-window-closed.patch)
 sha512sums=('SKIP'
             '049c4bf2e0f362f892e8eef28dd18a6c321251c686a9c9e49e4abfb778057de2fc68b95b4ff7bb8030a828a48b58554a56b810aba078c220cb01d5837083992e'
             '4bf3c692b216909afa98eae2d4e29106b8a53ede43ea12745b86517057af845a34c7e87aaa5024c29ce7cd3440d04cfd0dc881db8e35f85d1428de26db326585'
-            '463b07949c789d2be7568b93e0c7f79ab5fc753aef4c869c40ba29444ba10c12db4ad1bc0353d8b73a51619bcd8666ed3c72c070cb24b05087604e04791bda52')
+            '463b07949c789d2be7568b93e0c7f79ab5fc753aef4c869c40ba29444ba10c12db4ad1bc0353d8b73a51619bcd8666ed3c72c070cb24b05087604e04791bda52'
+            '8f59b911eccd4f8c965f60ae4ba111195f48a76326e1c63391b1ab61b74d74dcb021fdb835da07037b28823cac1c3fd3b01f5ace501b6b6b7fe6db5e2aef8068')
 
 prepare() {
   # Small patching
   cd $pkgname
 
   patch -Np1 --no-backup-if-mismatch < ../0001-.patch
+  patch -Np1 --no-backup-if-mismatch < ../0001-Add-cmdline-option-to-open-with-window-closed.patch
 
   # Prevent franz from being launched in dev mode
   sed -i \
