[qemu-git] Manual update qemu due to an unresolved upstream issue

--- a/archlinuxcn/qemu-git/lilac.yaml
+++ b/archlinuxcn/qemu-git/lilac.yaml
@@ -9,5 +9,5 @@ build_prefix: extra-x86_64
 pre_build: vcs_update
 
 update_on:
-  - source: vcs
-    vcs: git://git.qemu.org/qemu.git
+  - source: manual
+    manual: 1
