[eclipse-emf] add repo depends eclipse-platform

--- a/archlinuxcn/eclipse-emf/lilac.yaml
+++ b/archlinuxcn/eclipse-emf/lilac.yaml
@@ -10,6 +10,9 @@ pre_build: aur_pre_build
 
 post_build: aur_post_build
 
+repo_depends:
+  - eclipse-platform
+
 update_on:
   - source: aur
     aur: eclipse-emf
