[julia-git] fix debug build

--- a/archlinuxcn/julia-git/PKGBUILD
+++ b/archlinuxcn/julia-git/PKGBUILD
@@ -44,6 +44,7 @@ makedepends=("${depends_libs[@]}" "${makedepends_llvm[@]}"
              gcc-fortran git patchelf python)
 options=('debug' '!strip' '!buildflags')
 _patches=(
+  0001-Fix-debug-build.patch
   0002-Fix-source-file-paths.patch
   0003-Optimize-allocation-of-arrays.patch
   0004-Enable-basic-AA-in-O2.patch
@@ -60,12 +61,13 @@ source=('git://github.com/JuliaLang/julia'
         julia-clear-precompile.hook
         arch-source-translate.cpp)
 md5sums=('SKIP'
-         'b634ce07d9b70b0762660248d462c23f'
-         '2a1968a1dbeb305e146639797594762a'
-         '949522f85f0bbe9f3dcd664e41d54eb3'
-         '65fd12926465f42eb022cce47f7fd804'
-         '28c977ecb6a4d1e8624cae979e54cd5f'
-         '0d4bcd3b02457d49dfaa2b82de21d2b4'
+         '17f98ba13ad9726c7167581d81409158'
+         '69eacc96dbfd27ae8103bf6171e28619'
+         '60e6d3ae62adc938f3e4aed050769696'
+         '4bfae9c17499c322d1b8fc2b0167f052'
+         'd6e7afc5e3755ae8116738238b455063'
+         'fc1d741c0e2ebd0c80bbf9762b9e9a4f'
+         'aa6424e67a790c65b4d0d28d66befcd2'
          'effd2c21ffb69e66b43d4b7fbe074a51'
          'bde100b283ea5b7aaf80613abec98a57'
          '6e7fcba300512df8ab8ab65d3e1eb847'
