--- a/archlinuxcn/qemu-git/lilac.yaml
+++ b/archlinuxcn/qemu-git/lilac.yaml
@@ -4,10 +4,4 @@ maintainers:
   - github: heavysink
     email: winstonwu91@gmail.com
 
-build_prefix: extra-x86_64
-
-pre_build: vcs_update
-
-update_on:
-  - source: manual
-    manual: 1
+managed: false
