[deadbeef-git] update lilac

--- a/archlinuxcn/deadbeef-git/lilac.yaml
+++ b/archlinuxcn/deadbeef-git/lilac.yaml
@@ -8,6 +8,10 @@ build_prefix: extra-x86_64
 
 pre_build: vcs_update
 
+repo_depends:
+  - libblocksruntime
+  - libdispatch
+
 update_on:
   - source: github
     github: DeaDBeeF-Player/deadbeef
