--- a/archlinuxcn/gamemode/lilac.yaml
+++ b/archlinuxcn/gamemode/lilac.yaml
@@ -1,6 +1,11 @@
+build_prefix: multilib
+
 pre_build: aur_pre_build
 
 post_build: aur_post_build
+
+repo_depends:
+  - libinih
 
 update_on:
   - source: aur
