--- a/archlinuxcn/vmware-workstation/config
+++ b/archlinuxcn/vmware-workstation/config
@@ -1,9 +1,9 @@
 .encoding = "UTF-8"
-product.name = "VMware Workstation"
-product.version = "15.5.0"
-product.buildNumber = "14665864"
-workstation.product.version = "15.5.0"
-player.product.version = "15.5.0"
+product.name = "VMware Player"
+product.version = "16.0.0"
+product.buildNumber = "16894299"
+workstation.product.version = "16.0.0"
+player.product.version = "16.0.0"
 vix.config.version = "1"
 bindir = "/usr/bin"
 libdir = "/usr/lib/vmware"
@@ -13,14 +13,9 @@ vmware.fullpath = "/usr/bin/vmware"
 authd.fullpath = "/usr/bin/vmware-authd"
 gksu.rootMethod = "su"
 NETWORKING = "yes"
-VMBLOCK_CONFED = "no"
-VMCI_CONFED = "no"
-VSOCK_CONFED = "no"
 installerDefaults.autoSoftwareUpdateEnabled = "no"
 installerDefaults.dataCollectionEnabled = "no"
 installerDefaults.componentDownloadEnabled = "no"
 installerDefaults.transferVersion = "1"
 acceptOVFEULA = "yes"
 acceptEULA = "yes"
-authd.client.port = "902"
-authd.proxy.nfc = "vmware-hostd:ha-nfc"
