--- a/archlinuxcn/pcsx2-git/lilac.yaml
+++ b/archlinuxcn/pcsx2-git/lilac.yaml
@@ -8,6 +8,11 @@ build_prefix: multilib
 
 pre_build: vcs_update
 
+post_build: git_pkgbuild_commit
+
+repo_depends:
+  - lib32-wxgtk3
+
 update_on:
   - source: github
     github: PCSX2/pcsx2
