[pcsx2-avx2-git, pcsx2-avx-git] Replace name

--- a/archlinuxcn/pcsx2-git/PKGBUILD
+++ b/archlinuxcn/pcsx2-git/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: josephgbr <rafael.f.f1@gmail.com>
 # Contributor: Themaister <maister@archlinux.us>
 
-pkgname=pcsx2-avx-git
+pkgname=pcsx2-git
 pkgver=1.7.0.r338.5523b0271
 pkgrel=2
 pkgdesc='A Sony PlayStation 2 emulator'
