--- a/archlinuxcn/htpdate/PKGBUILD
+++ b/archlinuxcn/htpdate/PKGBUILD
@@ -1,11 +1,12 @@
 # Maintainer: Dominik Schrempf <dominik.schrempf at gmail dot com>
 # Contributor: Jonathan Ryan <jryan at curious-computing dot com>
 # Contributor: Hussam Al-Tayeb <hussam at visp dot net dot lb>
+
 pkgname=htpdate
 pkgver=1.2.2
 pkgrel=4
 pkgdesc="A client for time synchronisation"
-arch=(i686 x86_64)
+arch=(x86_64)
 url="http://www.vervest.org/htp/"
 license=(GPL2)
 depends=('glibc')
