--- a/archlinuxcn/ghcide/lilac.yaml
+++ b/archlinuxcn/ghcide/lilac.yaml
@@ -1,11 +1,10 @@
 maintainers:
-    - github: poscat0x04
+  - github: poscat0x04
+  - github: berberman
 
 update_on:
-    -
+  - source: aur
+    aur: ghcide
 
-      source: aur
-      aur:
 post_build: aur_post_build
-
 pre_build: aur_pre_build
