--- a/archlinuxcn/htpdate/lilac.yaml
+++ b/archlinuxcn/htpdate/lilac.yaml
@@ -5,6 +5,8 @@ post_build: aur_post_build
 update_on:
   - source: aur
     aur: htpdate
+  - source: manual
+    manual: 1
 
 maintainers:
   - github: dctxmei
