--- a/archlinuxcn/r8125/lilac.yaml
+++ b/archlinuxcn/r8125/lilac.yaml
@@ -7,7 +7,8 @@ update_on:
     aur: r8125
   - source: archpkg
     archpkg: linux
-    strip_release: true
+  - source: manual
+    manual: 1
 
 maintainers:
   - github: dctxmei
