--- a/archlinuxcn/clash-dctxmei/clash@.service
+++ b/archlinuxcn/clash-dctxmei/clash@.service
@@ -6,6 +6,7 @@ After=network.target nss-lookup.target
 User=clash
 ExecStart=/usr/bin/clash -d /etc/clash/ -f /etc/clash/%i.yaml
 Restart=on-abort
+StandardOutput=file:/var/log/clash/%i.log
 
 [Install]
 WantedBy=multi-user.target
