fix: packages that have ocaml dependencies
1. Ensure that packages with ocaml dependencies will be rebuilt when
   ocaml is updated.

--- a/archlinuxcn/ocaml-sexplib0/lilac.yaml
+++ b/archlinuxcn/ocaml-sexplib0/lilac.yaml
@@ -5,6 +5,10 @@ post_build: aur_post_build
 update_on:
   - source: aur
     aur: ocaml-sexplib0
+  - source: archpkg
+    archpkg: ocaml
+    from_pattern: '^(\d+\.\d+)\..*'
+    to_pattern: '\1'
 
 maintainers:
   - github: dctxmei
